ov-frontend/deploy.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: ov-frontend
  name: ov-frontend

spec:
  selector:
    matchLabels:
      app: ov-frontend

  template:
    metadata:
      labels:
        app: ov-frontend

    spec:
      containers:
        - image: ghcr.io/wgbh-mla/ov-frontend:pr-195
          imagePullPolicy: Always
          name: ov-frontend
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 10Mi
          ports:
            - containerPort: 3000
              name: http
          startupProbe:
            httpGet:
              path: /about # health
              port: http
            failureThreshold: 20
            periodSeconds: 3
          livenessProbe:
              httpGet:
                path: /about # health
                port: http
              failureThreshold: 3
              periodSeconds: 30
