ov-frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ov-frontend-ingress

spec:
  rules:
    - host: ov.wgbh-mla.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ov-frontend
                port:
                  number: 80
